# lifeops-ios

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  BEHAVIOR_STRATEGY.md  CI_CD.md  CI_SETUP_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEVICES.md  HARDWARE.md  LICENSE  QUICKSTART.md  README.md  ROADMAP_TO_PRODUCTION.md  ROUTINES.md  SERVICES.md  SESSION_SUMMARY.md  SETUP.md  STATUS_REPORT.md  TESTING_SETUP.md  VISION.md  docker-compose.yml  project.yml  projectAssementOnLoad.js  pyproject.toml
.claude/agents/: lifeops-orchestrator.md
.claude/commands/: architect.md  backend.md  database-architect.md  devops-specialist.md  fastapi-expert.md  frontend.md  gamification.md  goals.md  habits.md  health-data-specialist.md  integrations.md  python-reviewer.md  review.md  rpg-systems.md  security.md  service-integrator.md  setup.md  task.md  testing-engineer.md  timeline-architect.md
.github/: CI_QUICKREF.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
3d-models/: README.md  button-case.scad  door-sensor-case.scad  multi-sensor-case.scad
LifeOps/: Info.plist  LifeOps.entitlements  LifeOpsApp.swift
LifeOpsWatch/: Info.plist  LifeOpsWatchApp.swift  WatchTimelineView.swift
LifeOpsWidget/: Info.plist  LifeOpsWidget.swift  WidgetAPIClient.swift
Ma.xcodeproj/: project.pbxproj
Ma.xcodeproj/xcshareddata/xcschemes/: Ma.xcscheme  MaWatch.xcscheme
Shared/Models/: TimelineModels.swift
Shared/Services/: APIClient.swift
Shared/Theme/: MaDesignSystem.swift
Shared/Views/: ItemDetailSheet.swift  MaFlowingTimelineView.swift  MaWeatherTimeBackground.swift  TimelineView.swift  TimelineViewModel.swift
apps/: README.md
esphome/: README.md  bathroom-sensor.yaml  bedroom-button.yaml  bedroom-sensor.yaml  common.yaml  entry-door.yaml  entry-sensor.yaml  living-room-sensor.yaml  secrets.yaml.example
mosquitto/config/: mosquitto.conf
plans/: STATS_ARCHITECTURE.md
scripts/: backup.sh  restore.sh  validate-ci.sh
services/api/: .dockerignore  Dockerfile  TESTING.md  alembic.ini  pytest.ini  requirements-dev.txt  requirements.txt
services/api/alembic/: README.md  env.py
services/api/alembic/versions/: 001_add_users_table.py
services/api/app/: __init__.py  main.py
services/api/app/core/: config.py  database.py  error_handlers.py  exceptions.py  logging.py
services/api/app/core/security/: __init__.py  dependencies.py  jwt.py  password.py
services/api/app/models/: __init__.py  auth.py  gamification.py  health.py  timeline.py  user.py
services/api/app/routers/: __init__.py  auth.py  gamification.py  health.py  oura.py  timeline.py  user.py
services/api/app/services/: __init__.py  gamification.py  oura.py  timeline.py
services/api/docs/: AUTHENTICATION.md
services/api/scripts/: manage_migrations.sh
services/api/tests/: __init__.py  conftest.py
services/api/tests/integration/: __init__.py  test_auth.py  test_gamification_endpoints.py  test_health_endpoints.py  test_oura_endpoints.py  test_timeline_endpoints.py  test_user_endpoints.py
services/api/tests/unit/: __init__.py  test_auth_security.py  test_gamification_model.py  test_gamification_service.py  test_health_endpoint.py  test_health_model.py  test_oura_service.py  test_timeline_model.py  test_timeline_service.py  test_user_model.py
services/stats/: .dockerignore  Dockerfile  pytest.ini  requirements-dev.txt  requirements.txt
services/stats/app/: __init__.py  main.py
services/stats/app/core/: config.py  database.py
services/stats/app/models/: __init__.py  activity.py  character.py  skills.py  tree.py
services/stats/app/routers/: __init__.py  activities.py  characters.py  stats.py  tree.py
services/stats/app/services/: __init__.py  activity.py  character.py  progression.py  tree_engine.py
services/stats/init/: 001_schema.sql  002_seed_tree.sql
timescaledb/init/: 001_schema.sql  002_timeline.sql
wiki/: FAQ.md  Getting-Started.md  Home.md  README.md  RPG-Stats-System.md  Understanding-Your-Life-Score.md  _Sidebar.md
